# RTSPAllTheThings

./: .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  README.md  build.sh
build_image/: Dockerfile-build  build_ces_inside_docker.sh  build_rtspatt_inside_docker.sh
include/: server.h
src/: ascii.cpp  file_input.cpp  main.cpp  parsing.cpp  pipeline.cpp  server.cpp
